--- a/src/main/resources/org/example/demo2/bohol.fxml
+++ b/src/main/resources/org/example/demo2/bohol.fxml
@@ -1,68 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.media.MediaView?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.media.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="644.0" prefWidth="994.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.bohol">
-    <children>
-        <AnchorPane prefHeight="645.0" prefWidth="470.0" style="-fx-background-color: NAVAJOWHITE;">
-            <children>
-                <ImageView fx:id="backButton" fitHeight="30.0" fitWidth="30.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../../../images/backspace1.png" />
-                    </image>
-                </ImageView>
-                <Label layoutX="33.0" layoutY="46.0" text="Traveler's information">
-                    <font>
-                        <Font name="Arial Black" size="30.0" />
-                    </font>
-                </Label>
-                <Label layoutX="33.0" layoutY="105.0" text="Let's get started!">
-                    <font>
-                        <Font name="Arial" size="18.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="usernameField" editable="false" layoutX="36.0" layoutY="151.0" prefHeight="38.0" prefWidth="259.0" promptText="TRAVELER'S NAME" />
-                <DatePicker fx:id="durationField" layoutX="34.0" layoutY="251.0" prefHeight="38.0" prefWidth="259.0" promptText="DURATION" />
+<AnchorPane prefHeight="817.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.bohol">
 
-                <!-- Accordion for Hotels -->
-                <Accordion layoutX="33.0" layoutY="203.0" />
-                <Label layoutX="59.0" layoutY="406.0" prefHeight="28.0" prefWidth="164.0" text="Meals with time">
-                    <font>
-                        <Font name="System Bold" size="19.0" />
-                    </font>
-                </Label>
-                <Button fx:id="printPdfButton" layoutX="123.0" layoutY="579.0" mnemonicParsing="false" onAction="#handlePrintPdfButton" prefHeight="38.0" prefWidth="181.0" style="-fx-background-color: MIDNIGHTBLUE; -fx-background-radius: 25;" text="SAVE" textFill="WHITE">
-                    <font>
-                        <Font name="System Bold" size="13.0" />
-                    </font>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
-                </Button>
-                <ComboBox fx:id="hotelComboBox" layoutX="34.0" layoutY="203.0" prefHeight="34.0" prefWidth="259.0" promptText="HOTEL" style="-fx-font-weight: bold;" />
-                <ComboBox fx:id="topattractionComboBox" layoutX="34.0" layoutY="305.0" prefHeight="34.0" prefWidth="259.0" promptText="TOP ATTRACTION" style="-fx-font-weight: bold;" />
-                <ComboBox fx:id="activitiesComboBox" layoutX="34.0" layoutY="360.0" prefHeight="34.0" prefWidth="259.0" promptText="ACTIVITIES WITH TIME" style="-fx-font-weight: bold;" />
-                <ComboBox fx:id="breakfastComboBox" layoutX="68.0" layoutY="443.0" prefHeight="34.0" prefWidth="259.0" promptText="BREAKFAST" style="-fx-font-weight: bold;" />
-                <ComboBox fx:id="lunchComboBox" layoutX="68.0" layoutY="492.0" prefHeight="34.0" prefWidth="259.0" promptText="LUNCH" style="-fx-font-weight: bold;" />
-                <ComboBox fx:id="dinnerComboBox" layoutX="68.0" layoutY="537.0" prefHeight="34.0" prefWidth="259.0" promptText="DINNER" style="-fx-font-weight: bold;" />
-            </children>
-        </AnchorPane>
-        <MediaView fx:id="mediaView" layoutX="470.0">
-            <viewport>
-                <Rectangle2D height="650.0" width="525.0" />
-            </viewport>
-        </MediaView>
-    </children>
+    <!-- Media and Navigation -->
+    <MediaView fx:id="mediaView" fitHeight="810.0" fitWidth="527.0" layoutX="595.0" layoutY="3.0">
+        <viewport>
+            <Rectangle2D height="820.0" width="527.0" />
+        </viewport></MediaView>
+    <AnchorPane layoutY="1.0" prefHeight="813.0" prefWidth="595.0" style="-fx-background-color: NAVAJOWHITE;">
+        <children>
+
+            <!-- Username Field -->
+            <TextField fx:id="usernameField" layoutX="39.0" layoutY="14.0" prefHeight="43.0" prefWidth="247.0" promptText="Username" />
+            <!-- Arrival Section -->
+            <DatePicker fx:id="arrivalDatePicker" layoutX="37.0" layoutY="64.0" onAction="#handleArrivalTimeChanged" />
+            <TextField fx:id="arrivalTimeField" layoutX="216.0" layoutY="64.0" onKeyReleased="#handleArrivalTimeChanged" />
+            <Button fx:id="addArrivalButton" layoutX="376.0" layoutY="64.0" onAction="#handleAddArrivalActivity" text="Add Arrival Activity" />
+
+            <!-- Chosen Activities Table -->
+            <TableView fx:id="chosenActivitiesTable" editable="true" layoutX="38.0" layoutY="99.0" prefHeight="215.0" prefWidth="537.0">
+                <columns>
+                    <TableColumn fx:id="chosenActivityColumn" prefWidth="295.2453308105469" text="Activity" />
+                    <TableColumn fx:id="chosenTimeColumn" minWidth="0.0" prefWidth="204.67919921875" text="Time" />
+                </columns>
+            </TableView>
+
+            <!-- Predefined Activities Table -->
+            <TableView fx:id="predefinedActivitiesTable" editable="false" layoutX="38.0" layoutY="322.0" prefHeight="192.0" prefWidth="363.0">
+                <columns>
+                    <TableColumn fx:id="predefinedActivityColumn" prefWidth="250.0" text="Predefined Activities" />
+                </columns>
+            </TableView>
+            <Button layoutX="414.0" layoutY="374.0" onAction="#handleRemoveChosenActivity" prefHeight="35.0" prefWidth="158.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Remove Selected Activity" textFill="WHITE">
+                <font>
+                    <Font name="Arial Black" size="10.0" />
+                </font>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
+            <Button layoutX="414.0" layoutY="329.0" onAction="#handleAddPredefinedActivity" prefHeight="35.0" prefWidth="134.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Add Selected Activity" textFill="WHITE">
+                <font>
+                    <Font name="Arial Black" size="10.0" />
+                </font>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
+
+            <!-- Custom Activity Section -->
+            <TextField fx:id="customActivityField" layoutX="37.0" layoutY="521.0" prefHeight="35.0" prefWidth="172.0" promptText="Custom Activities" />
+            <TextField fx:id="customTimeField" layoutX="231.0" layoutY="521.0" prefHeight="35.0" prefWidth="172.0" promptText="Time" />
+            <Button layoutX="433.0" layoutY="521.0" onAction="#handleAddCustomActivity" prefHeight="35.0" prefWidth="117.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Activity" textFill="WHITE">
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+                <font>
+                    <Font name="Arial Black" size="9.0" />
+                </font>
+            </Button>
+
+            <Button layoutX="433.0" layoutY="770.0" onAction="#saveToDatabase" prefHeight="35.0" prefWidth="147.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Save to Database" textFill="WHITE">
+                <font>
+                    <Font name="Arial Black" size="13.0" />
+                </font>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
+            <Button fx:id="resetButton" layoutX="273.0" layoutY="770.0" onAction="#resetFields" prefHeight="35.0" prefWidth="147.0" style="-fx-background-radius: 60px; -fx-background-color: midnightblue;" text="Reset Fields" textFill="WHITE">
+                <font>
+                    <Font name="Arial Black" size="13.0" />
+                </font>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
+            <TableView fx:id="mealsTable" editable="false" layoutX="38.0" layoutY="566.0" prefHeight="150" prefWidth="363.0">
+                <columns>
+                    <TableColumn fx:id="mealsColumn" prefWidth="536.150975823191" text="Meals" />
+                </columns>
+            </TableView>
+            <Button layoutX="416.0" layoutY="623.0" onAction="#handleAddMealActivity" prefHeight="35.0" prefWidth="180.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Food" textFill="WHITE">
+                <font>
+                    <Font name="System Bold" size="13.0" />
+                </font>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </Button>
+
+            <Button layoutX="273.0" layoutY="731.0" mnemonicParsing="false" onAction="#handleAddCustomActivity1" prefHeight="25.0" prefWidth="148.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Add Custom Food" textFill="WHITE">
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+                <font>
+                    <Font name="System Bold" size="11.773585319519043" />
+                </font>
+            </Button>
+            <TextField fx:id="customActivityField1" layoutX="39.0" layoutY="726.0" prefHeight="35.0" prefWidth="226.0" promptText="Custom food" />
+
+            <!-- Back Button -->
+            <ImageView fx:id="backButton" fitHeight="22.0" fitWidth="98.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="@../../../images/backspace1.png" />
+                </image>
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+            </ImageView>
+
+            <!-- Hotel ComboBox -->
+            <ComboBox fx:id="hotelComboBox" layoutX="376.0" layoutY="24.0" prefWidth="150.0" />
+        </children>
+    </AnchorPane>
+
 </AnchorPane>
