--- a/src/main/resources/org/example/demo2/cebu.fxml
+++ b/src/main/resources/org/example/demo2/cebu.fxml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.media.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.media.MediaView?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="817.0" prefWidth="1085.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.cebu">
+<AnchorPane prefHeight="800.0" prefWidth="1095.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.cebu">
 
     <!-- Media and Navigation -->
-    <MediaView fx:id="mediaView" fitHeight="810.0" fitWidth="527.0" layoutX="595.0" layoutY="3.0">
+    <MediaView fx:id="mediaView" fitHeight="810.0" fitWidth="600.0" layoutX="600.0" layoutY="1.0">
         <viewport>
-            <Rectangle2D height="820.0" width="527.0" />
+            <Rectangle2D height="810.0" width="526.0" />
         </viewport></MediaView>
-    <AnchorPane layoutY="1.0" prefHeight="813.0" prefWidth="595.0" style="-fx-background-color: NAVAJOWHITE;">
+    <AnchorPane prefHeight="812.0" prefWidth="600.0" style="-fx-background-color: NAVAJOWHITE;">
         <children>
 
             <!-- Username Field -->
