--- a/src/main/resources/org/example/demo2/checkout.fxml
+++ b/src/main/resources/org/example/demo2/checkout.fxml
@@ -1,27 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.demo2.CheckoutController"
-            prefHeight="400.0" prefWidth="600.0">
-    <VBox spacing="10" alignment="CENTER" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.bottomAnchor="20">
-        <Label text="Your Saved Itineraries" style="-fx-font-size: 20px; -fx-font-weight: bold;"/>
-        <TableView fx:id="itineraryTable" VBox.vgrow="ALWAYS">
+<AnchorPane prefHeight="644.0" prefWidth="1043.0" style="-fx-background-color: NAVAJOWHITE;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.demo2.CheckoutController">
+    <VBox alignment="CENTER" prefHeight="645.0" prefWidth="1011.0" spacing="10" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="20">
+        <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Your Saved Itineraries" />
+        <TableView fx:id="itineraryTable" prefHeight="493.0" prefWidth="972.0" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="locationColumn" text="Location"/>
-                <TableColumn fx:id="hotelColumn" text="Hotel"/>
-                <TableColumn fx:id="activityColumn" text="Activity"/>
-                <TableColumn fx:id="dayColumn" text="Day"/>
+                <TableColumn fx:id="locationColumn" text="Location" />
+                <TableColumn fx:id="hotelColumn" text="Hotel" />
+                <TableColumn fx:id="activityColumn" text="Activity" />
+                <TableColumn fx:id="dayColumn" text="Day" />
             </columns>
         </TableView>
-        <HBox spacing="10" alignment="CENTER">
-            <Button text="Delete Selected" onAction="#handleDeleteButton"/>
-            <Button text="Print Selected" onAction="#handlePrintSelectedButton"/>
-            <Button text="Print All" onAction="#handlePrintAllButton"/>
-            <Button text="Back to Destinations" onAction="#handleBackButton"/>
+        <HBox alignment="CENTER" prefHeight="56.0" prefWidth="972.0" spacing="10">
+            <Button onAction="#handleDeleteButton" prefHeight="36.0" prefWidth="150.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Delete Selected" textFill="WHITE">
+            <font>
+               <Font name="Arial Black" size="13.0" />
+            </font>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></Button>
+            <Button onAction="#handlePrintSelectedButton" prefHeight="34.0" prefWidth="150.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Print Selected" textFill="WHITE">
+            <font>
+               <Font name="Arial Black" size="13.0" />
+            </font>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></Button>
+            <Button onAction="#handlePrintAllButton" prefHeight="34.0" prefWidth="150.0" style="-fx-background-color: midnightblue; -fx-background-radius: 60px;" text="Print All" textFill="WHITE">
+            <font>
+               <Font name="Arial Black" size="13.0" />
+            </font>
+            <cursor>
+               <Cursor fx:constant="HAND" />
+            </cursor></Button>
         </HBox>
     </VBox>
+    <ImageView fx:id="backButton" fitHeight="22.0" fitWidth="98.0" layoutX="4.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../../../images/backspace1.png" />
+        </image>
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor>
+    </ImageView>
 </AnchorPane>
